Fixed flicker and added a spinner.

--- a/css/beauty.css
+++ b/css/beauty.css
@@ -19,6 +19,10 @@ body {
 	overflow-x: hidden;
 }
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 .full-size {
 	width: 94%;
 	margin-top: 20px;
@@ -124,6 +128,7 @@ body {
 	box-shadow: 0 0 3px #333;
 	position: relative;
 	margin-bottom: 20px;
+	background: url(../images/spinner.gif) center center no-repeat;
 }
 
 .slideshow .arrow {
